Fixed navabr alignment, changed winter picture

--- a/_winter-varibles.scss
+++ b/_winter-varibles.scss
@@ -1,4 +1,4 @@
-$intro-img: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),  url("Pictures/NH.jpg");
+$intro-img: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),  url("Pictures/NH.jpg");
 
 $primary-background: #3D5484;
 $secondary-background: #5A7EB5;
