--- a/winter-styles.css
+++ b/winter-styles.css
@@ -251,8 +251,8 @@ div[class^="col-"] {
 
 .intro-img {
   /* Background image for intro section */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.3))), url("Pictures/NH.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("Pictures/NH.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0))), url("Pictures/NH.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("Pictures/NH.jpg");
 }
 
 .title {
